CHANGE LiveShoppingDetails - remove <del> element from the translations; add it to the TWIG template

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -290,7 +290,7 @@ legalDisclosure = "Legal disclosure"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; liveShopping - liveShopping
-liveShoppingBefore = "Before: <del>:price</del>"
+liveShoppingBefore = "Before: :price"
 liveShoppingDays = "Days"
 liveShoppingHours = "Hours"
 liveShoppingMinutes = "Minutes"
@@ -301,7 +301,7 @@ liveShoppingOfferEndsIn = "Offer ends in:"
 liveShoppingOfferSoldOut = "Offer sold out"
 liveShoppingRebate = ":rebate% off"
 liveShoppingRemainingStock = ":quantityRemaining of :quantityMax left"
-liveShoppingRrp = "RRP: <del>:price</del>"
+liveShoppingRrp = "RRP: :price"
 liveShoppingSeconds = "Seconds"
 ; liveShopping - liveShopping
 ; login - Login
