deliveryAddressEnRequireLabel - DE auf UK angepasst

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -312,7 +312,7 @@ deliveryAddressRequireLabel = Lieferadressfelder validieren (DE)
 billingAddressEnShowLabel = Rechnungsadressfelder im Adressformular anzeigen (UK)
 billingAddressEnRequireLabel = Rechnungsadressfelder validieren (UK)
 deliveryAddressEnShowLabel = Lieferadressfelder im Adressformular anzeigen (UK)
-deliveryAddressEnRequireLabel = Lieferadressfelder validieren (DE)
+deliveryAddressEnRequireLabel = Lieferadressfelder validieren (UK)
 addressFieldName1 = Firma
 addressFieldVatNumber = USt.-Nr.
 addressFieldSalutation = Anrede
