ADD missing translation prefixes

--- a/resources/lang/de/MultilingualismConfig.properties
+++ b/resources/lang/de/MultilingualismConfig.properties
@@ -13,10 +13,12 @@ homepage = "Startseite"
 item = "Artikel"
 itemSearch = "Artikelsuche"
 legalDisclosure = "Impressum"
+liveShopping = "Live Shopping"
 login = "Login"
 myAccount = "Mein Konto"
-pageNotFound = "Seite nicht gefunden"
+newsletter = "Newsletter"
 notifications = "Benachrichtigungen"
+pageNotFound = "Seite nicht gefunden"
 orderConfirmation = "Auftragsbestätigung"
 orderHistory = "Auftragshistorie"
 privacyPolicy = "Datenschutzerklärung"
@@ -27,5 +29,6 @@ returnHistory = "Retourenhistorie"
 return = "Retouren"
 shippingInfo = "Versandinformationen"
 singleItem = "Artikelansicht"
+storeSpecial = "Shop Aktionen"
 termsAndConditions = "AGB"
 wishList = "Wunschliste"
