--- a/resources/lang/en/MultilingualismConfig.properties
+++ b/resources/lang/en/MultilingualismConfig.properties
@@ -13,10 +13,12 @@ homepage = "Homepage"
 item = "Item"
 itemSearch = "Item search"
 legalDisclosure = "Legal disclosure"
+liveShopping = "Live shopping"
 login = "Login"
 myAccount = "My account"
-pageNotFound = "Page not found"
+newsletter = "Newsletter"
 notifications = "Notifications"
+pageNotFound = "Page not found"
 orderConfirmation = "Order confirmation"
 orderHistory = "Order history"
 privacyPolicy = "Privacy policy"
@@ -27,5 +29,6 @@ returnHistory = "Return history"
 return = "Return"
 shippingInfo = "Shipping information"
 singleItem = "Single item view"
+storeSpecial = "Store specials"
 termsAndConditions = "Terms and conditions"
 wishList = "Wish list"
