isValidDate checks if valid date instead of valid birthdate, refactoring and optimization, changed placeholders

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -4,7 +4,7 @@ addressAdditionalAddress1 = "Adresszusatz 1"
 addressAdditionalAddress2 = "Adresszusatz 2"
 addressAdditionalName = "Namenszusatz"
 addressBirthdate = "Geburtsdatum"
-addressBirthdatePlaceholder = "TT.MM.JJJJ"
+addressBirthdatePlaceholder = "tt.mm.jjjj"
 addressCancel = "Abbrechen"
 addressChangedWarning="Ihre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Lieferziel nicht unterstützt."
 addressCompany = "Firma"
