--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -4,7 +4,7 @@ addressAdditionalAddress1 = "Additional address information 1"
 addressAdditionalAddress2 = "Additional address information 2"
 addressAdditionalName = "Additional name"
 addressBirthdate = "Date of birth"
-addressBirthdatePlaceholder = "DD.MM.YYYY"
+addressBirthdatePlaceholder = "dd.mm.yyyy"
 addressCancel = "Cancel"
 addressChangedWarning="Your address has been changed since the selected shipping profile does not support this type of delivery destination."
 addressCompany = "Company"
