# Changed: * widget types to create new widget groups # Added: * Translations for the shop-builder widget groups

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -257,3 +257,10 @@ navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 ; Separator
 separatorLabel = "Trennlinie"
+; Types
+typeStructure = "Struktur"
+typeFooter = "Fußzeile"
+typeHeader = "Kopfzeile"
+typeDefault = "Standard"
+typeImage = "Bild"
+typeText = "Text"
