--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -257,3 +257,10 @@ navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
 separatorLabel = "Dividing line"
+; Types
+typeStructure = "Structure"
+typeFooter = "Footer"
+typeHeader = "Header"
+typeDefault = "Default"
+typeImage = "Image"
+typeText = "Text"
