ADD display attributes when grouping variations

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -250,6 +250,7 @@ itemFilterApply = "Filter anwenden"
 itemFilterCategory = "Kategorien"
 itemFilterReset = "Filter zurücksetzen"
 itemFrom = "ab "
+itemGroupedAttribute = ", :name: :value"
 itemInclVAT = "inkl. ges. MwSt."
 itemList1ListName = "Artikelliste"
 itemList2ListName = "Artikelliste"
