--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -250,6 +250,7 @@ itemFilterApply = "Apply filters"
 itemFilterCategory = "Categories"
 itemFilterReset = "Reset filters"
 itemFrom = "from "
+itemGroupedAttribute = ", :name: :value"
 itemInclVAT = "Incl. VAT"
 itemList1ListName = "Item list"
 itemList2ListName = "Item list"
