add new translations

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -182,6 +182,14 @@ devDateTimeFormatMoment = "DD.MM.YYYY, HH:mm"
 devTimeFormat = "H:i"
 devTimeFormatMoment = "HH:mm"
 ; dev - Entwickler
+; error - Fehlermeldungen
+errorActionIsNotExecuted = "Die Aktion konnte nicht ausgeführt werden."
+errorBasketItemVariationNotFound = "Die Variante ist nicht verfügbar."
+errorBasketItemNotEnoughStockForVariation = "Für die gewählte Menge ist nicht genügend Bestand verfügbar."
+errorBasketItemMaximumQuantityReachedForItem = "Die Maximalebestellmenge dieses Artikels wurde überschritten."
+errorBasketItemMaximumQuantityReachedForVariation = "Die Maximalebestellmenge dieser Variante wurde überschritten."
+errorBasketItemMinimumQuantityNotReachedForVariation = "Die Mindestbestellmenge dieser Variante wurde nicht erreicht."
+; error - Fehlermeldung
 ; footer - Footer
 footerAllRightsReserved = "Alle Rechte vorbehalten."
 footerCancellationForm = "Widerrufs:hyphenformular"
