FIX empty guest email address

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -388,6 +388,7 @@ newsletterOptInMessage = "Ihre Email-Adresse wurde bestätigt."
 notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht mehr erreicht."
 notificationsCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
 notificationsCheckPassword="Die Passwörter stimmen nicht überein."
+notificationsNoEmailEntered="Bitte geben Sie eine gültige Email-Adresse ein."
 notificationsInvalidResetPasswordUrl="Die angegebene URL ist ungültig oder abgelaufen."
 notificationsItemBundleSplitted = "Artikelpaket wurde aufgeteilt."
 notificationsItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
