--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -387,6 +387,7 @@ newsletterOptInMessage = "Your email address has been confirmed."
 notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
 notificationsCalculateShippingFailed = "Error while calculating shipping costs. Please contact the provider."
 notificationsCheckPassword="The passwords do not match."
+notificationsNoEmailEntered="Please enter a valid email address."
 notificationsInvalidResetPasswordUrl="The entered URL is invalid or expired."
 notificationsItemBundleSplitted = "Item bundle has been split."
 notificationsItemNotAdded = "The item could not be added."
