FIX confirmation link validity

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -302,6 +302,10 @@ myAccountOrdersPerPageLabel = Anzahl der Aufträge pro Seite in der Auftragshist
 myAccountOrderReturnActiveLabel = Retourenabwicklung im Mein-Konto-Bereich zulassen
 myAccountOrderReturnDaysLabel = Länge der Retourenfrist in Tagen
 myAccountOrderReturnInitialStatusLabel = Standardstatus für Retouren
+myAccountConfirmationLinkExpirationLabel = Gültigkeit der Kaufabwicklungs-URL
+myAccountConfirmationLinkExpirationAlways = Immer
+myAccountConfirmationLinkExpirationThirtyDays = 30 Tage
+myAccountConfirmationLinkExpirationNinetyDays = 90 Tage
 myAccountChangePaymentLabel = Änderung der Zahlungsart durch den Kunden zulassen
 myAccountConfirmationLinkLoginRedirectLabel = Weiterleitung zur Login-Seite durch den Link in der Bestellbestätigung
 billingAddressShowLabel = Rechnungsadressfelder im Adressformular anzeigen (DE)
