--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -303,6 +303,10 @@ myAccountOrderReturnActiveLabel = Allow returns in My account
 myAccountOrderReturnDaysLabel = Number of days to return items of an order
 myAccountOrderReturnInitialStatusLabel = Default status for return
 myAccountChangePaymentLabel = Allow customer to change the payment method
+myAccountConfirmationLinkExpirationLabel = Validity of checkout URL
+myAccountConfirmationLinkExpirationAlways = Always
+myAccountConfirmationLinkExpirationThirtyDays = 30 Days
+myAccountConfirmationLinkExpirationNinetyDays = 90 Days
 myAccountConfirmationLinkLoginRedirectLabel = Forward to login page after clicking link in order confirmation
 billingAddressShowLabel = Show invoice address fields in address form (DE)
 billingAddressRequireLabel = Enable invoice address field validation (DE)
