ADD collapse widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -257,3 +257,9 @@ navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 ; Separator
 separatorLabel = "Trennlinie"
+; Collapse
+collapseLabel = "FAQ"
+collapseBoxHeadlineLabel = "Frage"
+collapseBoxHeadlineTooltip = "Fragetext eingeben. Dieser Text steht als Titel im Widget."
+collapseBoxTextareaLabel = "Antwort"
+collapseBoxTextareaTooltip = "Antworttext eingeben. Dieser Text enthält die Antwort und wird nach Klick auf das Widget angezeigt."
