--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -257,3 +257,9 @@ navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
 separatorLabel = "Dividing line"
+; Collapse
+collapseLabel = "FAQ"
+collapseBoxHeadlineLabel = "Question"
+collapseBoxHeadlineTooltip = "TODO"
+collapseBoxTextareaLabel = "Answer"
+collapseBoxTextareaTooltip = "TODO"
