REMOVE appearance and IDs

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -259,6 +259,7 @@ navigationNavigationStyleTooltip = "Select style of the category navigation."
 separatorLabel = "Dividing line"
 ; Collapse
 collapseLabel = "FAQ"
+collapseBoxLabel = "FAQ"
 collapseBoxHeadlineLabel = "Question"
 collapseBoxHeadlineTooltip = "TODO"
 collapseBoxTextareaLabel = "Answer"
