--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -259,6 +259,7 @@ navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 separatorLabel = "Trennlinie"
 ; Collapse
 collapseLabel = "FAQ"
+collapseBoxLabel = "FAQ"
 collapseBoxHeadlineLabel = "Frage"
 collapseBoxHeadlineTooltip = "Fragetext eingeben. Dieser Text steht als Titel im Widget."
 collapseBoxTextareaLabel = "Antwort"
