UPDATE translation texts

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -259,8 +259,8 @@ navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 separatorLabel = "Trennlinie"
 ; Collapse
 collapseLabel = "FAQ"
-collapseBoxLabel = "FAQ"
+collapseBoxLabel = "FAQ-Eintrag"
 collapseBoxHeadlineLabel = "Frage"
-collapseBoxHeadlineTooltip = "Fragetext eingeben. Dieser Text steht als Titel im Widget."
+collapseBoxHeadlineTooltip = "Frage eingeben. Dieser Text wird als Titel des Eintrags angezeigt."
 collapseBoxTextareaLabel = "Antwort"
-collapseBoxTextareaTooltip = "Antworttext eingeben. Dieser Text enthält die Antwort und wird nach Klick auf das Widget angezeigt."
+collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des Eintrags nach Klick auf die Frage angezeigt."
