--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -259,8 +259,8 @@ navigationNavigationStyleTooltip = "Select style of the category navigation."
 separatorLabel = "Dividing line"
 ; Collapse
 collapseLabel = "FAQ"
-collapseBoxLabel = "FAQ"
+collapseBoxLabel = "FAQ entry"
 collapseBoxHeadlineLabel = "Question"
-collapseBoxHeadlineTooltip = "TODO"
+collapseBoxHeadlineTooltip = "Enter question. This text will be the title of the entry."
 collapseBoxTextareaLabel = "Answer"
-collapseBoxTextareaTooltip = "TODO"
+collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
