CHANGE SIngleItem - add filter to print a text for age restrictions

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -532,6 +532,11 @@ shippingInfoCosts = "Versandkosten"
 singleItemAdded = "Der Artikel wurde in den Warenkorb gelegt"
 singleItemAddToBasket = "In den Warenkorb"
 singleItemAge = "Altersfreigabe"
+singleItemAgeRestriction = "ab :age freigegeben"
+singleItemAgeRestrictionNotFlagged = "nicht gekennzeichnet"
+singleItemAgeRestrictionNotRequired = "nicht erforderlich"
+singleItemAgeRestrictionNotUnknown = "noch nicht bekannt"
+singleItemAgeRestrictionShort = "ab :age"
 singleItemBasket = "Warenkorb"
 singleItemCheckout = "Kasse"
 singleItemCondition = "Zustand"
@@ -542,7 +547,6 @@ singleItemDimensions = "Maße"
 singleItemExclusive = "zzgl."
 singleItemExclVAT = "zzgl. ges. MwSt."
 singleItemExternalVariationId = "Varianten-ID"
-singleItemFSK = "FSK ab :age freigegeben"
 singleItemGraduatedPrices = "Staffelpreise"
 singleItemId = "Art.-ID"
 singleItemImagePreviewCaption = "Bild :current von :total"
