UPDATE age restriction texts (en)

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -531,11 +531,11 @@ shippingInfoCosts = "Shipping"
 singleItemAdded = "The item was placed in the shopping cart."
 singleItemAddToBasket = "Add to shopping cart"
 singleItemAge = "Age rating"
-singleItemAgeRestriction = ":age and over"
-singleItemAgeRestrictionNotFlagged = "Not flagged"
+singleItemAgeRestriction = ":age and older"
+singleItemAgeRestrictionNotFlagged = "Not rated"
 singleItemAgeRestrictionNotRequired = "Not required"
 singleItemAgeRestrictionNotUnknown = "Unknown"
-singleItemAgeRestrictionShort = ":age and over"
+singleItemAgeRestrictionShort = ":age and older"
 singleItemBasket = "Shopping cart"
 singleItemCheckout = "Checkout"
 singleItemCondition = "Condition"
