UPDATE age restriction texts (de)

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -532,11 +532,11 @@ shippingInfoCosts = "Versandkosten"
 singleItemAdded = "Der Artikel wurde in den Warenkorb gelegt"
 singleItemAddToBasket = "In den Warenkorb"
 singleItemAge = "Altersfreigabe"
-singleItemAgeRestriction = "ab :age freigegeben"
-singleItemAgeRestrictionNotFlagged = "nicht gekennzeichnet"
-singleItemAgeRestrictionNotRequired = "nicht erforderlich"
-singleItemAgeRestrictionNotUnknown = "noch nicht bekannt"
-singleItemAgeRestrictionShort = "ab :age"
+singleItemAgeRestriction = "Ab :age freigegeben"
+singleItemAgeRestrictionNotFlagged = "Nicht gekennzeichnet"
+singleItemAgeRestrictionNotRequired = "Nicht erforderlich"
+singleItemAgeRestrictionNotUnknown = "Noch nicht bekannt"
+singleItemAgeRestrictionShort = "Ab :age"
 singleItemBasket = "Warenkorb"
 singleItemCheckout = "Kasse"
 singleItemCondition = "Zustand"
