ADD widget categories

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -257,10 +257,10 @@ navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 ; Separator
 separatorLabel = "Trennlinie"
-; Types
-typeStructure = "Struktur"
-typeFooter = "Fußzeile"
-typeHeader = "Kopfzeile"
-typeDefault = "Standard"
-typeImage = "Bild"
-typeText = "Text"
+; Categories
+categoryStructure = "Struktur"
+categoryFooter = "Footer"
+categoryHeader = "Header"
+categoryItem = "Artikel"
+categoryImage = "Bild"
+categoryText = "Text"
