--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -258,9 +258,9 @@ navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
 separatorLabel = "Dividing line"
 ; Types
-typeStructure = "Structure"
-typeFooter = "Footer"
-typeHeader = "Header"
-typeDefault = "Default"
-typeImage = "Image"
-typeText = "Text"
+categoryStructure = "Structure"
+categoryFooter = "Footer"
+categoryHeader = "Header"
+categoryItem = "Item"
+categoryImage = "Image"
+categoryText = "Text"
