CHANGW ageRestriction filter - remove the key for 18+ and add one for 0+

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -533,10 +533,10 @@ singleItemAdded = "Der Artikel wurde in den Warenkorb gelegt"
 singleItemAddToBasket = "In den Warenkorb"
 singleItemAge = "Altersfreigabe"
 singleItemAgeRestriction = "Ab :age freigegeben"
+singleItemAgeRestrictionNone = "Ohne Altersbeschränkung"
 singleItemAgeRestrictionNotFlagged = "Nicht gekennzeichnet"
 singleItemAgeRestrictionNotRequired = "Nicht erforderlich"
 singleItemAgeRestrictionNotUnknown = "Noch nicht bekannt"
-singleItemAgeRestrictionShort = "Ab :age"
 singleItemBasket = "Warenkorb"
 singleItemCheckout = "Kasse"
 singleItemCondition = "Zustand"
