--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -532,10 +532,10 @@ singleItemAdded = "The item was placed in the shopping cart."
 singleItemAddToBasket = "Add to shopping cart"
 singleItemAge = "Age rating"
 singleItemAgeRestriction = ":age and older"
+singleItemAgeRestrictionNone = "No age restriction"
 singleItemAgeRestrictionNotFlagged = "Not rated"
 singleItemAgeRestrictionNotRequired = "Not required"
 singleItemAgeRestrictionNotUnknown = "Unknown"
-singleItemAgeRestrictionShort = ":age and older"
 singleItemBasket = "Shopping cart"
 singleItemCheckout = "Checkout"
 singleItemCondition = "Condition"
