Combine LinkListWidget and ListWidget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -146,23 +146,18 @@ legalInformationShowCancellationLabel = "Widerrufsrecht sichtbar machen"
 legalInformationShowGtcLabel = "AGB sichtbar machen"
 legalInformationShowLegalDisclosureLabel = "Impressum sichtbar machen"
 legalInformationShowPrivacyPolicyLabel = "Datenschutzerklärung sichtbar machen"
-; Link list
-linkListEntryLabel = "Listeneintrag"
-linkListEntryNameLabel = "Angezeigter Text"
-linkListEntryNameTooltip = "Text eingeben, der auf die URL verlinkt."
-linkListEntryUrlLabel = "URL"
-linkListEntryUrlTooltip = "URL eingeben."
-linkListIconLabel = "Icon"
-linkListIconTooltip = "Icon für Listeneinträge auswählen."
-linkListLabel = "Linkliste"
-linkListTitleLabel = "Listentitel"
-linkListTitleTooltip = "Titel für die Linkliste eingeben."
 ; List
+listLabel = "Liste"
+listCenteredLabel = "Liste zentrieren"
+listEntryLabel = "Listeneintrag"
+listEntryNameLabel = "Angezeigter Text"
+listEntryNameTooltip = "Text eingeben, der auf die URL verlinkt."
+listEntryUrlLabel = "URL"
+listEntryUrlTooltip = "URL eingeben."
 listIconLabel = "Icon"
 listIconTooltip = "Icon für Listeneinträge auswählen."
-listLabel = "Liste"
-listTextLabel = "Listeneintrag"
-listTextTooltip = "Text für einen Listeneintrag eingeben."
+listTitleLabel = "Listentitel"
+listTitleTooltip = "Titel für die Liste eingeben."
 ; Live Shopping
 liveShoppingLabel = "Live-Shopping"
 liveShoppingTitleLabel = "Titel"
