ADD link list properties

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -147,6 +147,7 @@ legalInformationShowGtcLabel = "AGB sichtbar machen"
 legalInformationShowLegalDisclosureLabel = "Impressum sichtbar machen"
 legalInformationShowPrivacyPolicyLabel = "Datenschutzerklärung sichtbar machen"
 ; List
+linkListLabel = "Linkliste"
 listLabel = "Liste"
 listCenteredLabel = "Liste zentrieren"
 listEntryLabel = "Listeneintrag"
