--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -147,6 +147,7 @@ legalInformationShowGtcLabel = "Show terms and conditions"
 legalInformationShowLegalDisclosureLabel = "Show legal information"
 legalInformationShowPrivacyPolicyLabel = "Show privacy policy"
 ; List
+linkListLabel = "Link list"
 listCenteredLabel = "Center list"
 listEntryLabel = "List entry"
 listEntryNameLabel = "Displayed text"
