--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -209,7 +209,7 @@ newsletterShowNameInputsLabel = "Eingabefelder für Vor- und Nachname anzeigen"
 newsletterShowPrivacyPolicyCheckboxLabel = "Checkbox zur Einwilligung der Datenschutzerklärung anzeigen"
 newsletterTitleLabel = "Titel"
 newsletterTitleBarTextTooltip = "Titel eingeben."
-newsletterSubTitleBarTextTooltip = "Text eingeben."
+newsletterSubTitleBarTextTooltip = "Beschreibung eingeben."
 newsletterEmailFolderTooltip = "ID des E-Mail-Ordners eingeben."
 ; Top bar
 topBarBasketValuesBoth = "Warenwert und Anzahl der Artikel"
