CHANGE shopBuilder.json - add category checkout

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -257,6 +257,7 @@ navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 ; Separator
 separatorLabel = "Trennlinie"
 ; Categories
+categoryCheckout = "Kassenbereich"
 categoryStructure = "Struktur"
 categoryFooter = "Footer"
 categoryHeader = "Header"
