--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -257,11 +257,12 @@ navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
 separatorLabel = "Dividing line"
 ; Types
-categoryStructure = "Structure"
+categoryCheckout = "Checkout"
 categoryFooter = "Footer"
 categoryHeader = "Header"
-categoryItem = "Item"
 categoryImage = "Image"
+categoryItem = "Item"
+categoryStructure = "Structure"
 categoryText = "Text"
 ; Collapse
 collapseLabel = "FAQ"
