UPDATE shipping profile widget label and category

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -271,3 +271,5 @@ collapseBoxHeadlineLabel = "Frage"
 collapseBoxHeadlineTooltip = "Frage eingeben. Dieser Text wird als Titel des Eintrags angezeigt."
 collapseBoxTextareaLabel = "Antwort"
 collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des Eintrags nach Klick auf die Frage angezeigt."
+; Shipping Profile Select
+shippingProfileLabel = "Versandauswahl TODO"
