--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -271,3 +271,5 @@ collapseBoxHeadlineLabel = "Question"
 collapseBoxHeadlineTooltip = "Enter question. This text will be the title of the entry."
 collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
+; Shipping Profile Select
+shippingProfileLabel = "Versandauswahl TODO"
