ADD Payment provider widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -273,3 +273,5 @@ collapseBoxTextareaLabel = "Antwort"
 collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des Eintrags nach Klick auf die Frage angezeigt."
 ; Shipping Profile Select
 shippingProfileLabel = "Versandauswahl TODO"
+; Payment provider
+paymentProviderLabel = "Zahlungsart Auswahl"
