ADD shipping profile widget - layout container and appereance css class

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -273,3 +273,5 @@ collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
 ; Shipping Profile Select
 shippingProfileLabel = "Versandauswahl TODO"
+; Basket totals
+basketTotalsLabel = "Basket totals TODO"
