--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -275,3 +275,5 @@ collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des
 shippingProfileLabel = "Versandauswahl TODO"
 ; Payment provider
 paymentProviderLabel = "Zahlungsart Auswahl"
+;Coupon
+couponLabel = "Gutschein eingabe"
