CHANGE Payment Widget - add hinttext param

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -275,5 +275,7 @@ collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des
 shippingProfileLabel = "Versandauswahl TODO"
 ; Payment provider
 paymentProviderLabel = "Zahlungsart Auswahl"
+paymentProviderHinttextLabel = "Hinweistext"
+paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
 basketTotalsLabel = "Basket totals TODO"
