--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -273,5 +273,9 @@ collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
 ; Shipping Profile Select
 shippingProfileLabel = "Versandauswahl TODO"
+; Payment provider
+paymentProviderLabel = "Payment provider select"
+paymentProviderHinttextLabel = "Hinttext"
+paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
 basketTotalsLabel = "Basket totals TODO"
