CHANGE ShippingProfileWidget - add hinttext param

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -273,6 +273,8 @@ collapseBoxTextareaLabel = "Antwort"
 collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des Eintrags nach Klick auf die Frage angezeigt."
 ; Shipping Profile Select
 shippingProfileLabel = "Versandauswahl TODO"
+shippingProfileHinttextLabel = "Hinweistext"
+shippingProfileHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Payment provider
 paymentProviderLabel = "Zahlungsart Auswahl"
 paymentProviderHinttextLabel = "Hinweistext"
