--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -273,6 +273,8 @@ collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
 ; Shipping Profile Select
 shippingProfileLabel = "Versandauswahl TODO"
+shippingProfileHinttextLabel = "Hinweistext"
+shippingProfileHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Payment provider
 paymentProviderLabel = "Payment provider select"
 paymentProviderHinttextLabel = "Hinttext"
