--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -281,3 +281,5 @@ paymentProviderHinttextLabel = "Hinweistext"
 paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
 basketTotalsLabel = "Basket totals TODO"
+; Place order
+placeOrderLabel = "Kaufabschluss Button"
