--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -281,3 +281,5 @@ paymentProviderHinttextLabel = "Hinttext"
 paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
 ; Basket totals
 basketTotalsLabel = "Basket totals TODO"
+; Place order
+placeOrderLabel = "Placeorder Button"
