ADD address widget label

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -283,3 +283,5 @@ paymentProviderHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwische
 basketTotalsLabel = "Basket totals TODO"
 ; Place order
 placeOrderLabel = "Placeorder Button"
+; Address
+addressLabel = "Addressauswahl TODO"
