--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -285,3 +285,5 @@ basketTotalsLabel = "Basket totals TODO"
 placeOrderLabel = "Kaufabschluss Button"
 ; Address
 addressLabel = "Addressauswahl TODO"
+; Basket
+basketLabel = "Warenkorbinhalt"
