--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -285,3 +285,5 @@ basketTotalsLabel = "Basket totals TODO"
 placeOrderLabel = "Placeorder Button"
 ; Address
 addressLabel = "Addressauswahl TODO"
+; Basket
+basketLabel = "Shopping cart content"
