--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -287,3 +287,5 @@ placeOrderLabel = "Kaufabschluss Button"
 addressLabel = "Addressauswahl TODO"
 ; Basket
 basketLabel = "Warenkorbinhalt"
+; ContactWish
+contactWishLabel = "Hinweise und Wünsche"
