--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -287,3 +287,5 @@ placeOrderLabel = "Placeorder Button"
 addressLabel = "Addressauswahl TODO"
 ; Basket
 basketLabel = "Shopping cart content"
+; ContactWish
+contactWishLabel = "Notes and requests"
