updated build files

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -289,3 +289,5 @@ addressLabel = "Addressauswahl TODO"
 basketLabel = "Warenkorbinhalt"
 ; ContactWish
 contactWishLabel = "Hinweise und Wünsche"
+; Coupon
+couponLabel = "Gutschein eingabe"
