--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -289,3 +289,5 @@ addressLabel = "Addressauswahl TODO"
 basketLabel = "Shopping cart content"
 ; ContactWish
 contactWishLabel = "Notes and requests"
+; Coupon
+couponLabel = "Coupon input"
