--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -119,7 +119,7 @@ itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
 itemListManufacturer = "Hersteller"
-itemListManufacturerTooltip = "Hersteller auswählen"
+itemListManufacturerTooltip = "Hersteller wählen"
 ; Item sort
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
