--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -119,7 +119,7 @@ itemListPlaceholderListHeader = "Item list"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
 itemListManufacturer = "Manufacturer"
-itemListManufacturerTooltip = "Select Manufacturer"
+itemListManufacturerTooltip = "Select manufacturer"
 ; Item sort
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
