--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -50,6 +50,8 @@ gridTwoColumnLayoutOneToOne = "50% : 50%"
 gridTwoColumnLayoutOneToTwo = "33% : 66%"
 gridTwoColumnLayoutTooltip = "Raster-Layout wählen."
 gridTwoColumnLayoutTwoToOne = "66% : 33%"
+gridTwoColumnLayoutFiveToSeven = "40% : 80%"
+gridTwoColumnLayoutSevenToFive = "80% : 40%"
 ; Image box
 imageBoxCategoryIdLabel = "Kategorie"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
