ADD Sticky Container Widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -193,6 +193,8 @@ liveShoppingShowStockLabel = "Bestand anzeigen"
 liveShoppingShowStockProgressLabel = "Bestandsabhängigen Fortschrittsbalken anzeigen"
 liveShoppingPlaceholderTitle = "Kein Angebot aktiv"
 liveShoppingPlaceholderDescription = "An dieser Stelle wird kein Inhalt angezeigt, bis ein Angebot aktiv ist."
+; StickyContainer
+stickyContainerLabel = "Sticky Container"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Texteditor"
