--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -193,6 +193,8 @@ liveShoppingShowStockLabel = "Display stock"
 liveShoppingShowStockProgressLabel = "Display stock-dependent prograss bar"
 liveShoppingPlaceholderTitle = "No active offer"
 liveShoppingPlaceholderDescription = "We will showcase the next offer here once it becomes active."
+; StickyContainer
+stickyContainerLabel = "Sticky Container"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Text editor"
