--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -50,6 +50,8 @@ gridTwoColumnLayoutOneToOne = "50% : 50%"
 gridTwoColumnLayoutOneToTwo = "33% : 66%"
 gridTwoColumnLayoutTooltip = "Select grid layout."
 gridTwoColumnLayoutTwoToOne = "66% : 33%"
+gridTwoColumnLayoutFiveToSeven = "40% : 60%"
+gridTwoColumnLayoutSevenToFive = "60% : 40%"
 ; Image box
 imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
