--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -33,6 +33,19 @@ widgetIconEuro = "Eurozeichen"
 widgetIconHeart = "Herz"
 widgetIconNone = "Ohne"
 widgetIconThumbsUp = "Daumen hoch"
+widgetNum0 = "0"
+widgetNum1 = "1"
+widgetNum2 = "2"
+widgetNum3 = "3"
+widgetNum4 = "4"
+widgetNum5 = "5"
+widgetNum6 = "6"
+widgetNum7 = "7"
+widgetNum8 = "8"
+widgetNum9 = "9"
+widgetNum9 = "9"
+widgetUnitPx = "px"
+widgetUnitRem = "rem"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
@@ -255,7 +268,12 @@ navigationNavigationStyleMegaMenu = "Mega Menü"
 navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 ; Separator
+seperatorCustomUnit = "Benutzerdefinierte Einheit";
 separatorLabel = "Trennlinie"
+seperatorMarginBottom = "Außenabstand unten"
+seperatorMarginCustom = "Benutzerdefiniert"
+seperatorMarginTop = "Außenabstand oben"
+seperatorMarginValue = "Wert"
 ; Categories
 categoryCheckout = "Kassenbereich"
 categoryStructure = "Struktur"
@@ -290,4 +308,4 @@ basketLabel = "Warenkorbinhalt"
 ; ContactWish
 contactWishLabel = "Hinweise und Wünsche"
 ; Coupon
-couponLabel = "Gutschein eingabe"
+couponLabel = "Gutscheineingabe"
