--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -33,6 +33,18 @@ widgetIconEuro = "Euro sign"
 widgetIconHeart = "Heart"
 widgetIconNone = "None"
 widgetIconThumbsUp = "Thumbs up"
+widgetNum0 = "0"
+widgetNum1 = "1"
+widgetNum2 = "2"
+widgetNum3 = "3"
+widgetNum4 = "4"
+widgetNum5 = "5"
+widgetNum6 = "6"
+widgetNum7 = "7"
+widgetNum8 = "8"
+widgetNum9 = "9"
+widgetUnitPx = "px"
+widgetUnitRem = "rem"
 ; Grid
 gridFourColumnLabel = "Four column grid"
 gridThreeColumnLabel = "Three column grid"
@@ -255,7 +267,12 @@ navigationNavigationStyleMegaMenu = "Mega menu"
 navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
+seperatorCustomUnit ="Custom Unit"
 separatorLabel = "Dividing line"
+seperatorMarginBottom = "Margin bottom"
+seperatorMarginCustom = "Custom"
+seperatorMarginTop = "Margin top"
+seperatorMarginValue = "Value"
 ; Types
 categoryCheckout = "Checkout"
 categoryFooter = "Footer"
