# Updated: * Translation key naming

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -118,7 +118,7 @@ itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
-itemListManufacturer = "Hersteller"
+itemListListTypeManufacturer = "Hersteller"
 itemListManufacturerTooltip = "Hersteller wählen"
 ; Item sort
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
