--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -194,7 +194,7 @@ liveShoppingShowStockProgressLabel = "Display stock-dependent prograss bar"
 liveShoppingPlaceholderTitle = "No active offer"
 liveShoppingPlaceholderDescription = "We will showcase the next offer here once it becomes active."
 ; StickyContainer
-stickyContainerLabel = "Sticky Container"
+stickyContainerLabel = "Sticky container"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Text editor"
