ADD address widget translation keys to widget.properties

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -303,6 +303,42 @@ basketTotalsLabel = "Basket totals TODO"
 placeOrderLabel = "Kaufabschluss Button"
 ; Address
 addressLabel = "Addressauswahl TODO"
+addressType = "addressType TODO"
+addressTypeTooltip = "addressTypeTooltip TODO"
+addressInvoice = "addressInvoice TODO"
+addressShipping = "addressShipping TODO"
+addressLayout = "addressLayout TODO"
+addressLayoutTooltip = "addressLayoutTooltip TODO"
+addressLayoutDE = "addressLayoutDE TODO"
+addressLayoutGB = "addressLayoutGB TODO"
+addressFieldsInvoiceDE = "addressFieldsInvoiceDE TODO"
+addressRequiredFieldsInvoiceDE = "addressRequiredFieldsInvoiceDE TODO"
+addressFieldsInvoiceGB = "addressFieldsInvoiceGB TODO"
+addressRequiredFieldsInvoiceGB = "addressRequiredFieldsInvoiceGB TODO"
+addressFieldsShippingDE = "addressFieldsShippingDE TODO"
+addressRequiredFieldsShippingDE = "addressRequiredFieldsShippingDE TODO"
+addressFieldsShippingGB = "addressFieldsShippingGB TODO"
+addressRequiredFieldsShippingGB = "addressRequiredFieldsShippingGB TODO"
+addressFieldName1 = Company
+addressFieldVatNumber = VAT number
+addressFieldSalutation = Form of address
+addressFieldTitle = Title
+addressFieldBirthday = Date of birth
+addressFieldName4 = Name affix
+addressFieldAddress3 = Additional address 1
+addressFieldAddress4 = Additional address 2
+addressFieldStateId = State
+addressFieldPhoneNumber = Phone number
+addressFieldEnName1 = Company
+addressFieldEnVatNumber = VAT number
+addressFieldEnSalutation = Form of address
+addressFieldEnTitle = Title
+addressFieldEnBirthday = Date of birth
+addressFieldEnName4 = Name affix
+addressFieldEnAddress2 = Address 2
+addressFieldEnAddress3 = Address 3
+addressFieldEnAddress4 = Address 4
+addressFieldEnPhoneNumber = Phone number
 ; Basket
 basketLabel = "Warenkorbinhalt"
 ; ContactWish
