--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -302,6 +302,42 @@ basketTotalsLabel = "Basket totals TODO"
 placeOrderLabel = "Placeorder Button"
 ; Address
 addressLabel = "Addressauswahl TODO"
+addressType = "addressType TODO"
+addressTypeTooltip = "addressTypeTooltip TODO"
+addressInvoice = "addressInvoice TODO"
+addressShipping = "addressShipping TODO"
+addressLayout = "addressLayout TODO"
+addressLayoutTooltip = "addressLayoutTooltip TODO"
+addressLayoutDE = "addressLayoutDE TODO"
+addressLayoutGB = "addressLayoutGB TODO"
+addressFieldsInvoiceDE = "addressFieldsInvoiceDE TODO"
+addressRequiredFieldsInvoiceDE = "addressRequiredFieldsInvoiceDE TODO"
+addressFieldsInvoiceGB = "addressFieldsInvoiceGB TODO"
+addressRequiredFieldsInvoiceGB = "addressRequiredFieldsInvoiceGB TODO"
+addressFieldsShippingDE = "addressFieldsShippingDE TODO"
+addressRequiredFieldsShippingDE = "addressRequiredFieldsShippingDE TODO"
+addressFieldsShippingGB = "addressFieldsShippingGB TODO"
+addressRequiredFieldsShippingGB = "addressRequiredFieldsShippingGB TODO"
+addressFieldName1 = Firma
+addressFieldVatNumber = USt.-Nr.
+addressFieldSalutation = Anrede
+addressFieldTitle = Titel
+addressFieldBirthday = Geburtsdatum
+addressFieldName4 = Namenszusatz
+addressFieldAddress3 = Adresszusatz 1
+addressFieldAddress4 = Adresszusatz 2
+addressFieldStateId = Bundesland
+addressFieldPhoneNumber = Telefonnummer
+addressFieldEnName1 = Firma
+addressFieldEnVatNumber = USt.-Nr.
+addressFieldEnSalutation = Anrede
+addressFieldEnTitle = Titel
+addressFieldEnBirthday = Geburtsdatum
+addressFieldEnName4 = Namenszusatz
+addressFieldEnAddress2 = Adresse 2
+addressFieldEnAddress3 = Adresse 3
+addressFieldEnAddress4 = Adresse 4
+addressFieldEnPhoneNumber = Telefonnummer
 ; Basket
 basketLabel = "Shopping cart content"
 ; ContactWish
